--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       eaque saepe, maxime quia corrupti blanditiis quam hic veniam vitae, ea
       tempora quisquam placeat repudiandae alias sequi maiores consectetur qui?
     </h1>
+    <h2>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, qui quis.
+      Quos illum amet reiciendis, ab autem nemo soluta dolores animi officiis
+      alias inventore eveniet porro quod. Nostrum, sunt placeat!
+    </h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
       mollitia molestias repellat quaerat ullam facilis saepe quia officiis
